Removing the fixed header on mobile, removing javascript, saying hi to githubbers in console

--- a/public/css/application.css
+++ b/public/css/application.css
@@ -72,7 +72,7 @@ a:hover {
 .quasi-button:hover {
   border: 1px solid rgba(195, 232, 95, 0.3);
   border-radius: 2px;
-  color: #c3e85f;
+  color: #97c51c;
   font-size: 1rem;
   margin: 1rem 0;
   padding: 0 .3rem; }
@@ -106,7 +106,7 @@ a:hover {
   left: 0;
   top: 0;
   margin: 0;
-  position: absolute;
+  position: relative;
   text-align: center;
   width: 100%;
   box-shadow: 0px -2px 5px white; }
@@ -127,13 +127,6 @@ a:hover {
     #nav-wrapper {
       padding: 1rem;
       padding-top: 12rem; } }
-  #nav-wrapper.fixed {
-    position: fixed;
-    top: -101px; }
-    @media screen and (min-width: 481px) {
-      #nav-wrapper.fixed {
-        position: fixed;
-        top: 0px; } }
   #nav-wrapper .greeting {
     font-weight: 300;
     font-size: 1.5rem;
@@ -163,7 +156,7 @@ a:hover {
         line-height: 2.8rem; } }
 
 #main-portfolio {
-  margin-top: 12rem;
+  margin-top: 0;
   width: 100%; }
   @media screen and (min-width: 481px) {
     #main-portfolio {
