--- a/public/sass/_index.scss
+++ b/public/sass/_index.scss
@@ -1,5 +1,5 @@
 #main-portfolio {
-  margin-top: 12rem;
+  margin-top: 0;
   width: 100%;
 
   @include media($tablet) {
