--- a/public/sass/_nav.scss
+++ b/public/sass/_nav.scss
@@ -5,7 +5,7 @@
   left: 0;
   top: 0;
   margin: 0;
-  position: absolute;
+  position: relative;
   text-align: center;
   width: 100%;
   @include box-shadow(0px -2px 5px rgba($white, 1));
@@ -28,16 +28,6 @@
   @include media($desktop) {
     padding: 1rem;
     padding-top: 12rem;
-  }
-
-  &.fixed {
-    position: fixed;
-    top: -101px;
-
-    @include media($tablet) {
-      position: fixed;
-      top: 0px;
-    }
   }
 
   .greeting {
